# mlang

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: CompilerWarnings.cmake  Packaging.cmake
compiler/: CMakeLists.txt
compiler/include/mlang/ast/: Ast.hpp
compiler/include/mlang/codegen/: CodeGenBackend.hpp
compiler/include/mlang/ir/: Mir.hpp  MirBuilder.hpp
compiler/include/mlang/lexer/: Lexer.hpp  Token.hpp
compiler/include/mlang/parser/: Parser.hpp
compiler/include/mlang/sema/: Sema.hpp
compiler/include/mlang/support/: Arena.hpp  Diagnostic.hpp  SourceManager.hpp
compiler/include/mlang/types/: Type.hpp
compiler/src/ast/: AstPrinter.cpp
compiler/src/codegen/: CodeGenBackend.cpp
compiler/src/driver/: main.cpp
compiler/src/ir/: Mir.cpp  MirBuilder.cpp
compiler/src/lexer/: Lexer.cpp  Token.cpp
compiler/src/parser/: Parser.cpp
compiler/src/sema/: Sema.cpp
compiler/src/support/: Diagnostic.cpp  SourceManager.cpp
compiler/src/types/: Type.cpp
compiler/tests/: CMakeLists.txt  test_main.cpp
docs/design/: 01-philosophy.md  02-architecture.md  03-compiler-design.md  04-lexer.md  05-parser.md  06-ast.md  07-type-system.md  08-semantic-analysis.md  09-ir.md  10-optimization.md  11-llvm-codegen.md  12-runtime.md  13-memory-management.md  14-why-no-gc.md  15-concurrency.md  16-coroutines.md  17-exceptions.md  18-generics.md  19-reflection.md  20-stdlib.md  21-mango.md  22-mbuild.md  23-mfmt.md  24-mls.md  25-debugger.md  26-test-framework.md  27-file-organization.md  28-project-structure.md  29-abi.md  30-ffi.md  31-security.md  32-performance.md  33-roadmap.md  34-grammar.md  35-examples.md  36-compiler-class-diagram.md  37-development-phases.md  38-benchmarks.md  39-repository-structure.md  README.md
docs/grammar/: mlang.ebnf
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/src/: extension.js
editors/vscode/syntaxes/: mlang.tmLanguage.json
examples/: basics.m  concurrency.m  errors.m  generics.m  hello.m  types.m
runtime/: CMakeLists.txt
runtime/include/mlang_rt/: Runtime.hpp
runtime/src/: Runtime.cpp
stdlib/: README.md
stdlib/std/collections/: List.m  Map.m
stdlib/std/concurrent/: Channel.m
stdlib/std/core/: Prelude.m
stdlib/std/crypto/: Crypto.m
stdlib/std/fs/: File.m
stdlib/std/io/: Console.m
stdlib/std/json/: Json.m
stdlib/std/log/: Logger.m
stdlib/std/math/: Math.m
stdlib/std/reflect/: Reflect.m
stdlib/std/regex/: Regex.m
stdlib/std/string/: String.m
stdlib/std/test/: Test.m
stdlib/std/time/: Time.m
tools/mbuild/: CMakeLists.txt
tools/mbuild/src/: main.cpp
tools/mfmt/: CMakeLists.txt
tools/mfmt/src/: main.cpp
tools/mls/: CMakeLists.txt
tools/mls/src/: main.cpp
